@@ -22,6 +22,7 @@
 - Fix for bug where an attempt to save table data after the first save has occurred would fail (Oracle bug #13613714).
 - Fix for ENTITY FRAMEWORK MODEL FAILS WHEN IS CREATED FROM DATABASE (Oracle bug #13610452).
 - Fix for Bug on Installer failing to add registry entry causing that when creating a Project targeting .net framework different than 4.0v library was not listed. (Mysql bug #60462 Oracle bug #13491678).
+- Fixed MySqlTime parsing to handle milliseconds (Oracle bug #13708884)   
 
 Version 6.3.8
 - Modified ProviderManifest.xml to map TIMESTAMP db fields to the DateTime .NET type (MySQL bug #55351, Oracle bug #12652602).
